--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -365,3 +365,8 @@ a:hover, a:focus, a:active {
 .text-secondary {
   color: #ecb807 !important;
 }
+*center {
+  width:100%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center}
